--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <body>
     <h1>Collect building Item</h1>
     <p>Welcome to your Electron application.</p>
-    <button id="btn3">AUTO</button>
-    <button id="watchfilter">見ていないもの</button>
+    <button id="btn3">更新</button>
+    <button id="watchfilter">チェック済み</button>
     <button id="allshow">全表示</button>
     <div id="div"></div>
   </body>
