--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <button id="btn3">更新</button>
     <button id="watchfilter">チェック済み</button>
     <button id="allshow">全表示</button>
+    <button id="sort">昇順並び替え</button>
     <div id="div"></div>
   </body>
   <script src="./renderer.js"></script>
