--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello Wor</title>
+    <title>Building correct App</title>
     <link rel="stylesheet" href="index.css" />
   </head>
 
