--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <p>Welcome to your Electron application.</p>
     <button id="btn3">更新</button>
     <button id="watchfilter">チェック済み</button>
+    <button id="filter500">500万円以下</button>
     <button id="allshow">全表示</button>
     <button id="sort">昇順並び替え</button>
     <div id="div"></div>
