--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <button id="filter500">500万円以下</button>
     <button id="allshow">全表示</button>
     <button id="sort">昇順並び替え</button>
+    <button id="filter_area">土地のみ</button>
+    <button id="filter_build">建物のみ</button>
     <div id="div"></div>
   </body>
   <script src="./renderer.js"></script>
