fix the checked building item delete on onload

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div id="spin-area"></div>
     <h1>Collect building Item</h1>
     <p>Welcome to your Electron application.</p>
     <button id="btn3">更新</button>
@@ -19,5 +20,6 @@
     <button id="filter_build">建物のみ</button>
     <div id="div"></div>
   </body>
+  <script src="../node_modules/spin.js/spin.js"></script>
   <script src="./renderer.js"></script>
 </html>
