未チェック

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
   </head>
 
   <body>
-    <div id="spin-area"></div>
+    <div></div>
     <h1>Collect building Item</h1>
     <p>Welcome to your Electron application.</p>
     <button id="btn3">更新</button>
     <button id="watchfilter">チェック済み</button>
+    <button id="unwatchfilter">未チェック</button>
     <button id="filter500">500万円以下</button>
     <button id="allshow">全表示</button>
     <button id="upsort">昇順並び替え</button>
@@ -20,6 +21,5 @@
     <button id="filter_build">建物のみ</button>
     <div id="div"></div>
   </body>
-  <script src="../node_modules/spin.js/spin.js"></script>
   <script src="./renderer.js"></script>
 </html>
