--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div></div>
+    <input />
     <h1>Collect building Item</h1>
     <p>Welcome to your Electron application.</p>
     <button id="btn3">更新</button>
