--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,18 @@
   </head>
 
   <body>
-    <webview>
-      <input />
-    </webview>
-    <button id="stopbutton"></button>
     <h1>Collect building Item</h1>
     <p>Welcome to your Electron application.</p>
-    <button id="btn3">更新</button>
+    <button id="fetchBtn">更新</button>
     <button id="watchfilter">チェック済み</button>
     <button id="unwatchfilter">未チェック</button>
     <button id="filter500">500万円以下</button>
     <button id="allshow">全表示</button>
-    <button id="upsort">昇順並び替え</button>
-    <button id="downsort">降順並び替え</button>
+    <button id="sortAskBtn">昇順並び替え</button>
+    <button id="sortDescBtn">降順並び替え</button>
     <button id="filter_area">土地のみ</button>
     <button id="filter_build">建物のみ</button>
-    <div id="div"></div>
+    <div id="properties"></div>
   </body>
   <script src="./renderer.js"></script>
 </html>
