--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
       <button class="btn btn-outline-primary" id="filterUnwatchingBtn">非表示化分</button>
       <button class="btn btn-outline-primary" id="filter500">500万円以下</button>
       <button class="btn btn-outline-primary" id="filterPriceChanged">価格変更有</button>
+      <button class="btn btn-outline-primary" id="showSellingBtn">販売中</button>
+      <button class="btn btn-outline-primary" id="showSoldOutBtn">販売終了</button>
       <button class="btn btn-outline-primary" id="showAllBtn">全表示</button>
       <span>価格:</span>
       <button class="btn btn-outline-primary" id="sortPriceAscBtn">昇順</button>
@@ -23,6 +25,10 @@
       <button class="btn btn-outline-primary" id="sortDateAscBtn">昇順</button>
       <button class="btn btn-outline-primary" id="sortDateDescBtn">降順</button>
     </div>
+    <div class="text-right">
+      <span>表示件数:</span>
+          <input type="file" id="ImportFile">
+      </select>
 
     <div>last updated at<p id="last_updated_at"></p></div>
     <div id="properties" class="container"></div>
